--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,9 +7,9 @@ body, html {
   letter-spacing: 2px;
   font-weight: 300;
   color: #E4DED5!important;
-  font-family: 'Kumbh Sans', sans-serif;
-  
+  font-family: 'Kumbh Sans', sans-serif; 
 }
+
 .uk-navbar-container, .uk-container {
   background-color: rgba(100, 92, 81, 0.85)!important;
   padding: 20px;
@@ -37,4 +37,12 @@ body, html {
 
 .at-risk-li > img {
   height: 125px;
+}
+
+.breed-select {
+  background-color:  #E4DED5;
+}
+
+.uk-checkbox:checked, ::selection {
+  background-color: #B6ADA2!important;
 }
