--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,7 +4,6 @@ body, html {
   padding: 0px;
   height: 100%;
   background-image: url("../images/hero-image.jpg");
-
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -14,36 +13,7 @@ body, html {
   color: #E4DED5;
   font-family: 'Kumbh Sans', sans-serif!important; 
 }
-/* @media (max-width: 1200px) {
-  body, html {
-    background-image: url("../images/hero-image.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
-    height: 100%;
-  }
-}
-@media (max-width: 775px) {
-  body, html {
-    background-image: url("../images/hero-image.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
-    height: 100%;
-  }
-}
-@media (max-width: 500px) {
-  body, html {
-    background-image: url("../images/hero-image.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
-  }
-} */
-/* NAVBAR */
+
 .uk-navbar-container,  .uk-container, .uk-card {
   background-color: rgba(46, 46, 46, 0.9)!important;
   color: #E4DED5;
@@ -86,7 +56,7 @@ body, html {
 .dog-profile-card {
   margin-bottom: 20px;
 }
-.dog-profile-image {
+.dog-profile-image, .pet-profile-facts{
   padding: 0;
 }
 .search-images {
