styled the application page to match the index and search pages. The radio buttons need to be fixed so that more than one can be clicked on at a time

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,6 +10,7 @@
     font-family: 'Kumbh Sans', sans-serif!important; 
   }
   h1 {
+    text-align: center;
     color: #E4DED5;
     margin: 0;
     font-family: 'Kumbh Sans', sans-serif;
@@ -57,7 +58,7 @@
   height: 125px;
   }
   /* user options for dogs */
-  .breed-select {
+  .form-input-select {
     background-color:  #E4DED5;
   }
   .uk-checkbox:checked, ::selection {
