--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,6 +39,10 @@
     background-color: #2E2E2E;
     color: #E4DED5;
   }
+  .hamburger {
+    width:50px;
+    height:50px;
+  }
   /* button styles */
   .uk-button{
     background-color: #E4DED5!important;
@@ -70,11 +74,14 @@
     margin-bottom: 20px;
   }
   .dog-profile-image {
-    width: 33%;
+    width: 45%;
+    min-height: 400px;
+    margin-right: 10px;
   }
   .search-images {
+    width: 100%;
     height: 100%;
-    float: left;
+    position: center;
     object-fit: cover;
     overflow: hidden;
   }
@@ -84,8 +91,4 @@
     margin: 0;
     padding-bottom: 5px;
   }
-/* navbar styles */
-.hamburger {
-  width:50px;
-  height:50px;
-}
+
