fixed spelling error in js and styled the highlight card to have no bottom margin

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,6 +73,9 @@
   .dog-profile-card {
     margin-bottom: 20px;
   }
+  .highlight-container {
+    padding-bottom: 0;
+  }
   .dog-profile-image {
     width: 45%;
     min-height: 400px;
