added finishing touches

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,7 @@
     background-size: 100%;
     letter-spacing: 2px;
     font-family: 'Kumbh Sans', sans-serif!important;
+    background-color: FFFFFF;
   }
 
   h1 {
